adds styling to pages. adds the ability to delete records

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.1",
     "knex": "^0.13.0",
+    "method-override": "^2.3.10",
     "mocha": "^4.0.1",
     "morgan": "^1.9.0",
     "pg": "^7.3.0",
